syntax = "proto3";

package rpc;

service AuthServerRPC {
    rpc Login (AuthLoginReq) returns (AuthLoginRes) {}
}


message AuthLoginReq {
    int64  UID    = 1;
    string token  = 2;
}

message AuthLoginRes {
    uint32 errCode = 1;
    string errStr  = 2;
}